# chatbot-ollama-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: workflow.yml
.streamlit/: config.toml
app/: app.py
kubernetes/: config-map.yml  service.yml
src/chatcsia/: __init__.py  __main__.py  _version.py
src/chatcsia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chatcsia/llm/: chain.py  llm.py  prompt.py
src/ticc4chat/: __init__.py  __main__.py
src/ticc4chat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ticc4chat/document_loaders/: __init__.py  pdf.py  utils.py
src/ticc4chat/llm/: chain.py  prompt.py
