[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcsia"
description = "Chatbot for question answering over document"
authors = [{ name = "Swiss Ai Center" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "langchain",
    "langchain-community",
    "python-dotenv",
    "sentence_transformers",
    "pypdf",
    "pymupdf",
    "faiss-cpu",
    "loguru",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = { attr = "chatcsia.__version__" }
readme = { file = ["README.md"] }


[project.optional-dependencies]
dev = [
    "black",
    "flake8==4.0.1",
    "flake8-html",
    "jupyter",
    "sphinx",
    "pre-commit",
    "pytest",
    "tox",
    "coverage",
    "genbadge",
    "jupyter-book",
]
test = [
    "pytest",
    "tox",
    "coverage",
    "black",
    "flake8==4.0.1",
    "flake8-html",
    "genbadge",
]
ui = ["streamlit"]

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
    "chatcsia*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
    "chatcsia.tests*",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.isort]
profile = "black"
